Fix for search bar loading in and making the sidebar jump

--- a/sass/global.scss
+++ b/sass/global.scss
@@ -327,6 +327,10 @@ blockquote {
     }
 }
 
+.site-search {
+    min-height: 1.6875em; //27px (stops the bar lazy load making the content below move down the page)
+}
+
 .list-of-blog-posts {
     @extend .unstyled-list;
 }
